--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "gulp-jshint": "^2.0.4",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "jasmine": "^2.8.0",
     "jshint": "^2.9.5",
     "vinyl-source-stream": "^2.0.0"
   }
