--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "karma start karma.conf.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "bower-files": "^4.0.0",
+    "browser-sync": "^2.23.2",
     "browserify": "^14.5.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -17,7 +19,15 @@
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "jasmine": "^2.8.0",
+    "jasmine-core": "^2.8.0",
     "jshint": "^2.9.5",
+    "karma": "^2.0.0",
+    "karma-browserify": "^5.1.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jquery": "^0.2.2",
     "vinyl-source-stream": "^2.0.0"
   }
 }
