--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
     "bower-files": "^4.0.0",
     "browser-sync": "^2.23.2",
     "browserify": "^14.5.0",
