--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
     "bower-files": "^4.0.0",
@@ -22,6 +23,7 @@
     "gulp-util": "^3.0.8",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
+    "jasmine-expect": "^3.8.1",
     "jshint": "^2.9.5",
     "karma": "^2.0.0",
     "karma-browserify": "^5.1.2",
@@ -29,7 +31,9 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-matchers": "^3.7.0",
     "karma-jquery": "^0.2.2",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.9.0"
   }
 }
